--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -9,7 +9,8 @@
   },
   "dependencies": {
     "buefy": "^0.7.0",
-    "vue": "^2.5.17"
+    "vue": "^2.5.17",
+    "vue-scrollto": "^2.13.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.5",
