--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -9,6 +9,10 @@
   },
   "dependencies": {
     "buefy": "^0.7.0",
+    "bulma": "^0.7.2",
+    "bulma-carousel": "^3.0.0",
+    "bulma-extensions": "^3.0.0",
+    "css-loader": "^1.0.0",
     "vue": "^2.5.17",
     "vue-scrollto": "^2.13.0"
   },
@@ -16,6 +20,8 @@
     "@vue/cli-plugin-babel": "^3.0.5",
     "@vue/cli-plugin-eslint": "^3.0.5",
     "@vue/cli-service": "^3.0.5",
+    "node-sass": "^4.9.4",
+    "sass-loader": "^7.1.0",
     "vue-template-compiler": "^2.5.17"
   },
   "eslintConfig": {
