--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "start": "node server.js"
   },
   "dependencies": {
     "buefy": "^0.7.0",
@@ -13,6 +14,7 @@
     "bulma-carousel": "^3.0.0",
     "bulma-extensions": "^3.0.0",
     "css-loader": "^1.0.0",
+    "express": "^4.16.4",
     "vue": "^2.5.17",
     "vue-scrollto": "^2.13.0"
   },
