--- a/package.json
+++ b/package.json
@@ -9,12 +9,17 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "body-parser": "^1.18.3",
     "buefy": "^0.7.0",
     "bulma": "^0.7.2",
     "bulma-carousel": "^3.0.0",
     "bulma-extensions": "^3.0.0",
     "css-loader": "^1.0.0",
+    "dotenv": "^6.1.0",
     "express": "^4.16.4",
+    "googleapis": "^27.0.0",
+    "nodemailer": "^4.6.8",
+    "nodemon": "^1.18.5",
     "vue": "^2.5.17",
     "vue-scrollto": "^2.13.0"
   },
