--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.8",
+    "@fortawesome/free-solid-svg-icons": "^5.5.0",
+    "@fortawesome/vue-fontawesome": "^0.1.2",
     "body-parser": "^1.18.3",
     "buefy": "^0.7.0",
     "bulma": "^0.7.2",
@@ -18,8 +21,10 @@
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
     "googleapis": "^27.0.0",
+    "i": "^0.3.6",
     "nodemailer": "^4.6.8",
     "nodemon": "^1.18.5",
+    "npm": "^6.4.1",
     "vue": "^2.5.17",
     "vue-scrollto": "^2.13.0"
   },
